--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,3 @@
-/* body{
-    background-image: linear-gradient(url(https://media.valorant-api.com/agents/e370fa57-4757-3604-3648-499e1f642d3f/displayicon.png));
-    color: #990000;
-    0px 8px 10px 1px rgba(0, 0, 0, .14), 0px 3px 14px 2px rgba(0, 0, 0, .12), 0px 5px 5px -3px rgba(0, 0, 0, .2);
-} */
 *{
     padding: 0;
     margin: 0;
@@ -12,4 +7,17 @@ body{
     color: #EB4E62;
     background-color: #1e1e1e;
 }
-
+.img-carrossel{
+    width: 100%;
+    height: 400px;
+    object-fit: cover;
+}
+.cards-carrossel{
+    width: 100%;
+    height: 650px;
+    object-fit: cover;
+}
+.container-carrossel h1{
+    text-align: center;
+    padding: 30px 0;
+}
